--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tvshows",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -18,5 +18,13 @@
   "devDependencies": {},
   "author": "Anas siddiqui",
   "license": "ISC",
-  "description": ""
+  "description": "Alexa skil",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Anas-siddiqui/tvshows.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Anas-siddiqui/tvshows/issues"
+  },
+  "homepage": "https://github.com/Anas-siddiqui/tvshows#readme"
 }
